--- a/index.html
+++ b/index.html
@@ -44,5 +44,7 @@
     </nav>
     <div class="content__image"></div>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <p class="footer__copyright">© Emma Woelk 2024</p>
+  </footer>
 </body>
